--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -112,3 +112,13 @@
   text-shadow: #01ffff -2px 0px , #ff00ff 2px 0px;
   width: larger;
 }
+
+.btn-sm{
+  background-color: none;
+  border-color: transparent;
+  border-width: 0ch;
+}
+
+.btn-cancel{
+  color: transparent;
+}
