--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -1,17 +1,26 @@
 .card-product {
   overflow: hidden;
-  height: 120px;
-  background: white;
+  height: 170px;
+  background: #28292b;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
-  width: 900px;
-  margin: 10px auto;
+  width: 1100px;
+  margin: 15px auto;
+  border-radius: 5px;
+  &:hover{
+    transform: scale(1.025);
+    transition: 1s;
+    .btn-cancel{
+      color:#01ffff;
+    }
+  }
 }
+
 
 .card-product img {
   height: 100%;
-  width: 120px;
+  width: 170px;
   object-fit: cover;
 }
 
@@ -21,13 +30,17 @@
 }
 
 .card-product h2 {
-  font-size: 16px;
+  font-size: 27px;
   font-weight: bold;
   margin: 0;
+  a{
+    text-decoration: none;
+    color: white;
+  }
 }
 
 .card-product p {
-  font-size: 12px;
+  font-size: 15px;
   line-height: 1.4;
   opacity: .7;
   margin-bottom: 0;
@@ -40,4 +53,11 @@
 
 .card-product .card-product-actions {
   margin-left: 350px;
+}
+
+.pricebooking{
+  color: #01ffff;
+  p{
+    font-size: 16px;
+  }
 }
