--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -46,7 +46,7 @@
       <h1 class="mt-3"><%= @place.name %> | <%= @place.category %></h1>
       <p><i class="fa-solid fa-location-dot"></i> <%= @place.location %></p>
       <p><i class="fa-solid fa-users"></i> <strong></strong> <%= @place.capacity %></p>
-      <p><i class="fa-solid fa-tag"></i> <strong></strong> <%= @place.price.to_i %> €/night</p>
+      <p class="pricebooking"><i class="fa-solid fa-tag"></i> <strong></strong> <%= @place.price.to_i %> €/night</p>
       <div class="mb-3" style="border-top: 1px solid rgba(222, 214, 214, 0.6);" >
         <h3 class="mt-3">Description</h3>
         <p><%= @place.description %></p>
@@ -72,7 +72,7 @@
       <% end %>
       <br>
       <div class="d-flex">
-        <p data-price-change-target="pricePerNight"><%= @place.price %></p><p style="padding-left: 7px;" data-price-change-target="nights">€ x 0 nights</p>
+        <p data-price-change-target="pricePerNight"><%= @place.price.to_i %></p><p style="padding-left: 7px;" data-price-change-target="nights">€ x 0 nights</p>
       </div>
       <div class="d-flex justify-content-between total">
         <p><strong>Total</strong></p>
