--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,8 @@
+<audio src="https://adineo.ch/wp-content/uploads/2022/11/pepas.mp3" autoplay loop></audio>
+<audio autoplay loop>
+  <source src="https://adineo.ch/wp-content/uploads/2022/11/pepas.mp3" type="audio/mpeg">
+</audio>
+
 <div id="wrapper-fijo ">
   <div id="carouselExampleIndicators" class="carousel slide home-carusel" data-bs-ride="true">
     <div class="carousel-indicators">
