--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -18,8 +18,8 @@
   // justify-content: center;
   // align-content: center;
   // z-index: 0;
-  position: absolute;
-  z-index: 0;
+  position: relative;
+  //z-index: 0;
 }
 
 .floating-logo{
@@ -30,8 +30,8 @@
     // z-index: 100;
     width: fit-content;
     height: fit-content;
-    position: relative;
-    z-index: 100;
-    top: 200px;
+    position: absolute;
+    //z-index: 100;
+    //top: 200px;
 
 }
