--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
-<div id="wrapper-fijo ">
-  <div id="carouselExampleIndicators" class="carousel slide home-carusel" data-bs-ride="true">
+<div id="wrapper-fijo">
+  <div id="carouselExampleIndicators" class="carousel slide home-carousel" data-bs-ride="true">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -26,7 +26,7 @@
     </button>
   </div>
 
-  <div class="container floating-logo">
+  <div class="floating-logo container">
     <%# <%= image_tag "5_200_500.png", width: 1000, class:"" %>
     <h1 id="home-logo">UNHING'D</h1>
     <div>
