--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -1,9 +1,9 @@
 #home-logo{
   color: white;
-  font-size: 200px;
   text-align: center;
-  font-weight: 1000;
   font-style: bold;
+  font-size: 13vw;
+  font-weight: 1000;
   letter-spacing: 5px;
   text-shadow: #01ffff -6px 0px , #ff00ff 6px 0px;
 }
