--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -11,38 +11,41 @@
   <% end %>
 </div>
 
-<div class="d-flex m-1">
-  <div class="container m-1 d-flex justify-content-center align-content-between flex-wrap">
-    <% @places.each do |place| %>
-      <%= link_to place_path(place), class:"text-decoration-none" do %>
-        <div class="card-trip">
-          <% if place.photos.attached? %>
-            <img src="<%= cl_image_path place.photos.first.key, height: 300, crop: :fill %>">
-          <% else %>
-            <%= image_tag("dark_carousel_2.png") %>
-          <% end %>
-          <div class="card-trip-infos">
-            <div>
-              <h2><%= place.name %></h2>
-              <p><i class="fa-solid fa-location-dot"></i> <%= place.location %></p>
-              <p><i class="fa-solid fa-users"></i> <%= place.capacity %></p>
-              <p class="price"><strong><i class="fa-solid fa-tag"></i> <%= place.price.to_i %> €/night </strong></p>
-            </div>
-            <% if current_user == place.user %>
-              <div class="icons">
-                <%= link_to edit_place_path(place.id) do %><i class="fa-solid fa-pencil"></i><% end %>
-                <%= link_to place_path(place), data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete?"} do %><i class="fa-solid fa-trash-can"></i><% end %>
-              </div>
+<div class="container">
+  <div class="row">
+    <div class="col-12 col-lg-7 container d-flex justify-content-center align-content-between flex-wrap">
+      <% @places.each do |place| %>
+        <%= link_to place_path(place), class:"text-decoration-none" do %>
+          <div class="card-trip">
+            <% if place.photos.attached? %>
+              <img src="<%= cl_image_path place.photos.first.key, height: 300, crop: :fill %>">
+            <% else %>
+              <%= image_tag("dark_carousel_2.png") %>
             <% end %>
+            <div class="card-trip-infos">
+              <div>
+                <h2><%= place.name %></h2>
+                <p><i class="fa-solid fa-location-dot"></i> <%= place.location %></p>
+                <p><i class="fa-solid fa-users"></i> <%= place.capacity %></p>
+                <p class="price"><strong><i class="fa-solid fa-tag"></i> <%= place.price.to_i %> €/night </strong></p>
+              </div>
+              <% if current_user == place.user %>
+                <div class="icons">
+                  <%= link_to edit_place_path(place.id) do %><i class="fa-solid fa-pencil"></i><% end %>
+                  <%= link_to place_path(place), data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete?"} do %><i class="fa-solid fa-trash-can"></i><% end %>
+                </div>
+              <% end %>
+            </div>
           </div>
-        </div>
+        <% end %>
       <% end %>
-    <% end %>
-  </div>
-
-  <div id="map" style="width: 50%; height: 800px;"
-    data-controller="map"
-    data-map-markers-value="<%= @markers.to_json %>"
-    data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+    </div>
+    <div class="col-12 col-lg-5 order-sm-last">
+      <div id="map"
+        data-controller="map"
+        data-map-markers-value="<%= @markers.to_json %>"
+        data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+      </div>
+    </div>
   </div>
 </div>
