--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,47 +1,45 @@
 <div class="container">
-  <div class= "container mb-3 mt-3 d-flex justify-content-between">
-  <div class= "container">
-
-  <%# Carousel starts %>
-  <div id="carouselExampleIndicators" class="carousel carousel-show slide" data-bs-ride="true">
-  <div class="carousel-indicators">
-    <% count = 1 %>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"  class="active" aria-current="true" aria-label="Slide 1"></button>
-    <% while count < @place.photos.length  %> <%  %>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="<%=count%>" aria-label="Slide <%=count+1%>"></button>
-      <% count +=1 %>
-    <% end %>
-  </div>
-  <div class="carousel-inner rounded-4">
-    <% if @place.photos.attached? %>
-      <div class="carousel-item active">
-        <%= cl_image_tag @place.photos.first.key, height: 448, width: 640, crop: :fill, gravity: :auto, class: "picture-carousel d-sm-block w-100" %>
-      </div>
-
-      <% @place.photos[1..].each do |photo| %>
-        <div class="carousel-item">
-          <%= cl_image_tag photo.key, height: 448, width: 640, crop: :fill, gravity: :auto, class: "picture-carousel d-sm-block w-100" %>
+  <div class= "row">
+    <div class= "col-12 col-lg-8">
+      <%# Carousel starts %>
+      <div id="carouselExampleIndicators" class="carousel carousel-show slide" data-bs-ride="true">
+        <div class="carousel-indicators">
+          <% count = 1 %>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"  class="active" aria-current="true" aria-label="Slide 1"></button>
+          <% while count < @place.photos.length  %> <%  %>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="<%=count%>" aria-label="Slide <%=count+1%>"></button>
+            <% count +=1 %>
+          <% end %>
         </div>
-      <% end %>
+        <div class="carousel-inner rounded-4">
+          <% if @place.photos.attached? %>
+            <div class="carousel-item active">
+              <%= cl_image_tag @place.photos.first.key, height: 448, width: 640, crop: :fill, gravity: :auto, class: "picture-carousel d-sm-block w-100" %>
+            </div>
 
-    <% else %>
-      <div class="carousel-item active">
-        <%= image_tag "dark_carousel_2.png", height: 448, class: "picture-carousel d-sm-block w-100" %>
+            <% @place.photos[1..].each do |photo| %>
+              <div class="carousel-item">
+                <%= cl_image_tag photo.key, height: 448, width: 640, crop: :fill, gravity: :auto, class: "picture-carousel d-sm-block w-100" %>
+              </div>
+            <% end %>
+
+          <% else %>
+            <div class="carousel-item active">
+              <%= image_tag "dark_carousel_2.png", height: 448, class: "picture-carousel d-sm-block w-100" %>
+            </div>
+          <% end %>
+        </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-    <% end %>
-  </div>
-
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-
-</div>
-<%# Carousel ends %>
+      <%# Carousel ends %>
 
       <h1 class="mt-3"><%= @place.name %> | <%= @place.category %></h1>
       <p><i class="fa-solid fa-location-dot"></i> <%= @place.location %></p>
@@ -59,24 +57,25 @@
       data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
       </div>
     </div>
-
-    <div class="container new-booking " data-controller="price-change">
-      <h1 class="text-center">New Booking</h1>
-      <%= simple_form_for [@place, @booking] , class:"container" do |f| %>
-        <div class="row">
-          <div class="col" data-action="change->price-change#changeNights" ><%= f.input :start_date, as: :string, input_html: { data: { controller: "flatpickr" } } %></div>
-          <div class="col"><%= f.input :end_date, as: :string, input_html: { data: { controller: "flatpickr" } }%></div>
+    <div class="col-12 col-lg-4">
+      <div class="new-booking" data-controller="price-change">
+        <h1 class="text-center">New Booking</h1>
+        <%= simple_form_for [@place, @booking] , class:"container" do |f| %>
+          <div class="row">
+            <div class="col" data-action="change->price-change#changeNights" ><%= f.input :start_date, as: :string, input_html: { data: { controller: "flatpickr" } } %></div>
+            <div class="col"><%= f.input :end_date, as: :string, input_html: { data: { controller: "flatpickr" } }%></div>
+          </div>
+          <div class="row"><%= f.input :number_of_people %></div>
+          <div class="d-grid"><%= f.submit "Book Party!", class: "btn btn-ghost-fill" %></div>
+        <% end %>
+        <br>
+        <div class="d-flex">
+          <p data-price-change-target="pricePerNight"><%= @place.price.to_i %></p><p style="padding-left: 7px;" data-price-change-target="nights">€ x 0 nights</p>
         </div>
-        <div class="row"><%= f.input :number_of_people %></div>
-        <div class="d-grid"><%= f.submit "Book Party!", class: "btn btn-ghost-fill" %></div>
-      <% end %>
-      <br>
-      <div class="d-flex">
-        <p data-price-change-target="pricePerNight"><%= @place.price.to_i %></p><p style="padding-left: 7px;" data-price-change-target="nights">€ x 0 nights</p>
-      </div>
-      <div class="d-flex justify-content-between total">
-        <p><strong>Total</strong></p>
-        <p><strong data-price-change-target="price">0 €</strong></p>
+        <div class="d-flex justify-content-between total">
+          <p><strong>Total</strong></p>
+          <p><strong data-price-change-target="price">0 €</strong></p>
+        </div>
       </div>
     </div>
   </div>
