resized and converted images to webp

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,13 +7,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <%= image_tag("main_photo.png", class: "picture-carousel d-sm-block w-100") %>
+        <%= image_tag("main_photo.webp", class: "picture-carousel d-sm-block w-100") %>
       </div>
       <div class="carousel-item">
-        <%= image_tag("dark_carousel_2.png", class: "picture-carousel d-sm-block w-100" ) %>
+        <%= image_tag("dark_carousel_2.webp", class: "picture-carousel d-sm-block w-100" ) %>
       </div>
       <div class="carousel-item">
-        <%= image_tag("dark_carousel_3.png", class: "d-sm-block w-100" ) %>
+        <%= image_tag("dark_carousel_3.webp", class: "d-sm-block w-100" ) %>
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
